# sverige-news

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
assets/: about.html  index.css
migrations/: 001_initialize_database.sql  002_reports.sql  003_disable_nwt.sql  006_rm_duplicate.sql  008_report_params.sql  009_report_input.sql  011_report_group_center.sql
src/: background.rs  clustering.rs  db.rs  feeds.rs  id.rs  main.rs  md5_hash.rs  normalizer.rs  openai.rs  persisted.rs  url.rs  web.rs
src/feeds/: abc.rs  aftonbladet.rs  dagen.rs  dn.rs  expressen.rs  nkpg.rs  scaraborgs.rs  svd.rs  svt.rs  tv4.rs
src/migrations/: 001_initialize_database.sql  002_reports.sql  004_delete_tt.sql  005_rename_Skaraborgs.sql
