[package]
name = "sverige-news"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"
complexity = "deny"
style = "deny"
pedantic = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
debug = false

[dependencies]
feed-rs = "1.4"
reqwest = "0.11"
thiserror = "1.0"
tokio = { version = "1.36", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5"
sqlx = { version = "0.7", features = ["sqlite", "chrono", "runtime-tokio"] }
chrono = "0.4"
uuid = "1.7"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"
rayon = "1.9"
md5 = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
maud = "0.26"
lightspeed_scheduler = { version = "0.57.0", features = ["tracing"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
